# truco

./: CMakeLists.txt  LICENSE  README.md  bordertrackeromp.cpp  bordertrackeromp.h  findtrucontour.h  test_trucontour.cpp
